
              cameratopam: Fix arithmetic underflow in JPEG processing;
              unknown effect.

              pbmtoxbm: Fix bug: crash with zero width input.  Broken in
              Netpbm 10.37 (December 2006).

              pnmtorle: Fix buffer overrun with long file name.  Always
              present.  (pnmtorle was new to Netpbm in Netpbm 9.0 (April
              2000)).

              pbmtopi3: Fix bug: wrong output when input is higher or wider
              than 640 pixels.  Always broken (pbmtopi3 was new in Netpbm 1
              (September 1991).

              st4topgm: Fix bug: with no argument, uses file named "'" instead
              of Standard Input.  Always present (st45topgm was new in Netpbm
              10.70 (March 2015).

              pbmtomgr: Fix incorrect output when input is too large (must be
              at most 4095 pixels high or wide).  Always broken.  (pbmtomgr
              was new in 1989).

              pbmtomacp: fix wild pointer dereference with -b larger than
              image height.  Always broken.  (pbmtomacp was new in X.V11R3
              (March 1988).

              ppmtorgb3: Fix buffer overflow with long input file name.
              Always present.  (ppmtorgb3 was new in X.V11R4 (November 1989).

              ppmtoarbtxt: fix bug: wrong output when high numbers represent
              darker.  Broken in Netpbm 10.69 (November 2014).

              ppmtoarbtxt: better rounding in sample values.

              test: replace some GNU-only code with more portable code that
              works on OS X.  Thanks Ryan Schmidt <ryandesign@macports.org>.

              makeman: deal properly with backlash in source.  Thanks Willem
              van Schaik <willem@schaik.com>.

              Build: don't build and install libjbig and libjasper if we
              are using external versions of them instead.

              Build: work around bug in GCC < 4.2 related to SSE2 builtins