@@ -29,9 +29,12 @@ not yet  BJH  Release 10.71.00
               present.  (pnmtorle was new to Netpbm in Netpbm 9.0 (April
               2000)).
 
+              pbmtopk: Fix buffer overrun with long file name.  Always
+              present.  (pbmtopk was new in Netpbm 1 (March 1991)).
+
               pbmtopi3: Fix bug: wrong output when input is higher or wider
-              than 640 pixels.  Always broken (pbmtopi3 was new in Netpbm 1
-              (September 1991).
+              than 640 pixels.  Always broken (pbmtopi3 was new in September
+              1991).
 
               st4topgm: Fix bug: with no argument, uses file named "'" instead
               of Standard Input.  Always present (st45topgm was new in Netpbm
